<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSI Ready</string>
    <string name="Copyright_2014">\u00A9 RSI Ready 2014.  All Rights Reserved</string>
    <string name="Copyright_After_2014">\u00A9 RSI Ready 2014-%1$d.  All Rights Reserved</string>
    <string name="Emergency">Emergency</string>
    <string name="EmergencyMenu">Emergency Menu</string>
    <string name="Home">Home</string>
    <string name="Mission_Statement">Making Emergency Anesthesia Safer</string>
    <string name="phemModeString">Pre-Hospital Mode:</string>
    <string name="rsiNow">RSI Now</string>
    <string name="Settings">Settings</string>
    <string name="SettingsMenu">Settings Menu</string>
    <string name="TabIndications">Indications</string>
    <string name="TabDrugs">Drugs</string>
    <string name="TabEquipment">Equipment</string>
    <string name="TabTeam">Team</string>
    <string name="TabFinal">Final</string>
    <string name="UsefulTools">Useful Tools</string>
    <string name="Version">Version: </string>
    
    <string name="title_activity_example">Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="preo2_header">Pre-Oxygenation Time:</string>
    <string name="stop">Stop</string>
    <string name="click_start_preo2">Start Pre-Oxygenation</string>
    <string name="displayWeight">%1$d kg %2$s %2$s.  Tap to Change</string>
    

</resources>
